# meeting-points-public-transit

./: .gitignore  CMakeLists.txt  README.md
data/gesamt_de/: calendar.txt  foot_paths.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
data/gtfs_s_bahn_stuttgart/: agency.txt  calendar.txt  calendar_dates.txt  routes.txt  stop_time_overrides.txt  stop_times.txt  stops.txt  transfers.txt  translations.txt  trips.txt
data/schienenfernverkehr_de/: agency.txt  calendar.txt  calendar_dates.txt  feed_info.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
data/schienenregionalverkehr_de/: agency.txt  calendar.txt  calendar_dates.txt  feed_info.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
data/vvs_gtfs_j24/: agency.txt  calendar.txt  calendar_dates.txt  feed_info.txt  routes.txt  shapes.txt  stop_times.txt  ticketing_deep_links.txt  ticketing_identifiers.txt  transfers.txt  trips.txt
data/vvs_j24/: foot_paths - not comb.txt  foot_paths.txt  stops.txt
graphs/gesamt_de/: g-tree-4-1048.json  graph-with-footpaths.txt  graph-withCH-with-footpaths.txt  landmark_durations_0.txt  landmark_durations_1.txt  landmark_durations_2.txt  landmark_durations_3.txt  landmark_durations_4.txt  landmark_durations_5.txt  landmarks.txt  partition-with-footpaths-1024.txt
graphs/vvs_j24/: graph-with-footpaths.txt  graph-withCH-with-footpaths.txt  landmark_durations_0.txt  landmarks.txt  (+1 more)
src/: CMakeLists.txt  cli-controller.cpp  cli-controller.h  constants.h  experiment-controller.cpp  experiment-controller.h  gtree-controller.cpp  gtree-controller.h  header.h  main.cpp
(+106 files in other folders)
